ingress/rules/media-automation/overseerr/ingress-overseerr.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr-external
  namespace: default
spec:
  ports:
  - protocol: TCP
    port: 5055
    targetPort: 5055

---

apiVersion: v1
kind: Endpoints
metadata:
  name: overseerr-external
  namespace: default
subsets:
  - addresses:
      - ip: 10.0.0.7
    ports:
      - port: 5055

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-overseerr
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP" # Change to HTTPS if required
spec:
  ingressClassName: nginx
  rules:
  - host: overseerr.domain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: overseerr-external
            port:
              number: 5055
  tls:
  - hosts:
    - overseerr.domain.com
    secretName: overseerr-tls
